merged in branch communique3 and did so much fixing up ugh
i do not know whether the application even works; i tried to not touch the existing code as much as possible